fixed slider on mobile final

--- a/css/gallery-style.css
+++ b/css/gallery-style.css
@@ -92,8 +92,8 @@ display: block;
 }
 
 .gallery .thumbnails .thumb {
-  min-width: 60px;
-  height: 60px;
+  width: 70px;
+  height: 55px;
   background-position: center center;
   background-size: cover;
   box-sizing: border-box;
@@ -195,7 +195,7 @@ display: block;
   position: absolute;
   display: block;
   width: 5px;
-  height: calc(60px + 10px);
+  height: calc(50px + 14px);
   z-index: 2;
   margin: 0;
   left: 0;
@@ -204,32 +204,13 @@ display: block;
 .gallery .thumbnails .slider .indicator {
   width: 100%;
   height: 30px;
-  max-height: calc(100% - 10px);
+  max-height: calc(100% - 15px);
   position: relative;
   top: 50%;
   transform: translateY(-50%);
   background: #800000;
   border-radius: 1px;
 }
-
-/* Mobile Landscape Slider Fix */
-@media only screen 
-  and (orientation: landscape) 
-  and (min-device-width: 375px) 
-  and (max-device-width: 812px) {
-    .gallery .thumbnails .slider .indicator {
-        transform: translateY(-80%);
-    }
-    }
-
-@media only screen 
-  and (orientation: landscape) 
-  and (min-device-width: 375px) 
-  and (max-device-width: 812px) {
-    .gallery .thumbnails .slider {
-      height: calc(45px + 10px);
-    }
-    }
 
 
 /* Responsive additions */
